	`twittering-edit-mode-info'.
	(twittering-edit-post-status): determine the attribute of the
	tweet being posted by the variable `twittering-edit-mode-info'.

	* twittering-mode.el: Allow a reply where a mention is not placed
	on the beginning.
	(twittering-edit-post-status): allow a reply where a mention is
	not placed on the beginning.
	(twittering-update-status-from-minibuffer): likewise.

2012-02-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Accept a symbol as FUNC of a composite
	timeline spec ":exclude-if/FUNC/SPEC".
	(twittering-extract-timeline-spec): accept a symbol as FUNC of
	a composite timeline spec ":exclude-if/FUNC/SPEC".
	* test/test-twittering-mode.el: Add a test of an exclude-if
	timeline spec with a symbol as FUNC.

	* twittering-mode.el: Give the help overlay a priority specified
	by `twittering-help-overlay-priority'.
	(twittering-help-overlay-priority): new variable.
	(twittering-edit-setup-help): give the overlay a priority
	specified by `twittering-help-overlay-priority'.

2012-02-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use an after-string property instead of
	a before-string property to show the help on an edit buffer.
	Thanks to irie who discoverd the problem and wrote a suitable
	code.
	(twittering-edit-setup-help): set an after-string property of the
	overlay for the help and give high priority to the overlay.

	* twittering-mode.el: Remove duplicates in a merge timeline spec.
	(twittering-extract-timeline-spec): remove duplicates in a list of
	timeline specs in a merge timeline spec.
	* test/test-twittering-mode.el: Add a test of reducing duplicates
	in a merge timeline spec.

	* twittering-mode.el: Remove duplicates in the list of primary
	base timeline specs.
	(twittering-get-primary-base-timeline-specs): remove duplicates in
	the list of primary base timeline specs.
	* test/test-twittering-mode.el: Add a test of dependence of
	composite timeline specs.
